--- a/css/style.css
+++ b/css/style.css
@@ -19111,7 +19111,7 @@ button:hover {
   
   /* Popup content */
   .popup-content {
-	background-color: #fcffc1;
+	background-color: #fff;
 	text-decoration: #000;
 	margin: 15% auto;
 	padding: 20px;
